--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,11 @@ android {
 
 dependencies {
 
+    implementation platform('androidx.compose:compose-bom:2023.03.00')
+    implementation platform('androidx.compose:compose-bom:2023.03.00')
+    implementation 'com.google.android.engage:engage-core:1.3.1'
+    androidTestImplementation platform('androidx.compose:compose-bom:2023.03.00')
+    androidTestImplementation platform('androidx.compose:compose-bom:2023.03.00')
     def coil_version = "2.5.0"
     def coroutines_version = "1.3.9"
     def constraintlayout_version = "1.0.1"
@@ -76,6 +81,8 @@ dependencies {
     def nav_version = "2.7.5"
     def navcompose_version ="2.4.7"
     def tab_version = "0.27.1"
+    def paging_version = "3.1.1"
+    def pagingcompose_version = "1.0.0-alpha18"
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation("androidx.constraintlayout:constraintlayout:2.1.4")
@@ -159,4 +166,14 @@ dependencies {
     // tab page
     implementation("com.google.accompanist:accompanist-pager:$tab_version")
     implementation ("com.google.accompanist:accompanist-pager-indicators:$tab_version")
+
+    // Paging3
+    implementation "androidx.paging:paging-runtime:$paging_version"
+    // alternatively - without Android dependencies for tests
+    testImplementation "androidx.paging:paging-common:$paging_version"
+
+    implementation "androidx.paging:paging-guava:$paging_version"
+
+    implementation "androidx.paging:paging-compose:$pagingcompose_version"
+
 }
