--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,8 @@ android {
         applicationId "kr.co.justkimlol"
         minSdk 27
         targetSdk 34
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "2.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -63,6 +63,7 @@ dependencies {
     implementation platform('androidx.compose:compose-bom:2023.03.00')
     implementation platform('androidx.compose:compose-bom:2023.03.00')
     implementation 'com.google.android.engage:engage-core:1.3.1'
+    implementation 'com.google.ar:core:1.40.0'
     androidTestImplementation platform('androidx.compose:compose-bom:2023.03.00')
     androidTestImplementation platform('androidx.compose:compose-bom:2023.03.00')
     def coil_version = "2.5.0"
@@ -175,5 +176,9 @@ dependencies {
     implementation "androidx.paging:paging-guava:$paging_version"
 
     implementation "androidx.paging:paging-compose:$pagingcompose_version"
+
+    // chart
+    implementation("co.yml:ycharts:2.1.0")
+    implementation("androidx.compose.ui:ui-graphics:1.5.4")
 
 }
