--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:theme="@style/Theme.LolInfoViewer"
         tools:targetApi="31">
         <activity
-            android:name=".ui.usermatch.MatchActivity"
+            android:name=".mainfragment.user.usermatch.MatchActivity"
             android:exported="false"
             android:label="@string/title_activity_match"
             android:theme="@style/Theme.LolInfoViewer" />
